[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ejtf"
version = "0.1.0"
description = "Easy JSON Text Format - A file format for programmatically manipulating text"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Enrique Pio Rodicio", email = "enrique.pio@rodic.io"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EnriquePioRodicio/ejtf"
Repository = "https://github.com/EnriquePioRodicio/ejtf"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]
